# example-auth-serwer-web_serwer

./: .editorconfig  .env.example  .gitignore  Cargo.toml  README.md  examples.rest
posts/: Hello World.md
src/: auth.rs  main.rs  posts.rs
src/auth/: auth_required.rs  register.rs  users.rs
